# pagegen

./: .gitignore  CHANGELOG.md  README.md  create_icons.py  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
docs/: README.md
docs/architecture/: README.md  backend.md  frontend.md  source-structure-policy.md  system-overview.md
docs/decisions/: ADR-0001-readme-structure.md  README.md
docs/process/: README.md  debugging.md  definition-of-done.md  error-policy.md  ownership.md  performance-budget.md  planning.md  release.md  tdd.md
docs/product/: README.md  known-gaps.md  vision.md  workflows.md
src/: App.test.tsx  App.tsx  README.md  index.css
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: ai_service.rs  code_generator.rs  commands.rs  error.rs  exporter.rs  file_storage.rs  lib.rs  main.rs  models.rs  project_store.rs  settings.rs  version_control.rs
src-tauri/src/tests/: mod.rs  project_store_tests.rs
src/components/: ChatInput.tsx  CodePanel.tsx  CreateProjectModal.tsx  ExportModal.tsx  Preview.tsx  README.md  SettingsModal.tsx  Sidebar.tsx  index.ts
src/lib/: ai.test.ts  ai.ts  preview.test.ts  preview.ts  storage.test.ts  storage.ts  utils.test.ts  utils.ts
src/services/: README.md  ipc.test.ts  ipc.ts
src/store/: index.ts  projectStore.test.ts  projectStore.ts
src/types/: index.ts
tasks/: README.md  backlog.md
tasks/in-progress/: generation-error-visibility.md  mvp-polish-weekly-plan.md  source-structure-governance.md
